src/styles/main.scss
.main {
    background-color: $color-gray-4;
    display: flex;
    flex-direction: column;
    flex: 1;
    height: 100vh;
    overflow: hidden;

    &__content {
        flex: 1;
        height: inherit;
        overflow: scroll;
        padding: 25px 24px;
    }
}

@media screen and (min-width: 1024px) {
    .main {
        flex-direction: row;

        &__content {
            padding: 48px 51px;
        }

        .toolbar {
            order: -1;
        }
    }
}

